# skript-lsp

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
apps/skript-studio-ui/: .gitignore  README.md  components.json  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
apps/skript-studio-ui/sample-scripts/: economy.sk  essentials.sk
apps/skript-studio-ui/scripts/: build-sidecar.ps1  generate-icons.py
apps/skript-studio-ui/src/: App.tsx  index.css
apps/skript-studio-ui/src-tauri/: Cargo.toml  tauri.conf.json
apps/skript-studio-ui/src-tauri/capabilities/: default.json
apps/skript-studio-ui/src-tauri/icons/: icon.icns
apps/skript-studio-ui/src-tauri/src/: lib.rs  main.rs
apps/skript-studio-ui/src-tauri/src/commands/: fs.rs  lsp.rs  mod.rs
apps/skript-studio-ui/src-tauri/src/lsp/: manager.rs  mod.rs
apps/skript-studio-ui/src/components/docs/: DocsCategory.tsx  DocsEntry.tsx  DocsPanel.tsx  DocsSearch.tsx
apps/skript-studio-ui/src/components/editor/: EditorBreadcrumb.tsx  EditorTabs.tsx  MonacoEditor.tsx  OutputPanel.tsx  StatusBar.tsx  WelcomeOverlay.tsx
apps/skript-studio-ui/src/components/explorer/: FileExplorer.tsx  NewFileDialog.tsx
apps/skript-studio-ui/src/components/layout/: AppLayout.tsx
apps/skript-studio-ui/src/components/menu/: MenuBar.tsx
apps/skript-studio-ui/src/components/settings/: AppearanceSettings.tsx  LSPSettings.tsx  SettingsDialog.tsx
apps/skript-studio-ui/src/components/ui/: badge.tsx  button.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  tooltip.tsx  tree-view.tsx
apps/skript-studio-ui/src/hooks/: use-lsp.ts  use-skript-theme.ts  use-tauri-fs.ts  use-tauri-lsp.ts
apps/skript-studio-ui/src/lib/: monaco-skript.ts  monaco-theme.ts  tauri-commands.ts  utils.test.ts  utils.ts
apps/skript-studio-ui/src/stores/: docs-store.ts  editor-store.ts  lsp-store.ts  settings-store.ts
apps/skript-studio-ui/src/types/: lsp.ts  settings.ts  skript.ts
crates/skript-core/: Cargo.toml
crates/skript-core/src/: client.rs  completion.rs  default_syntax.rs  hover.rs  lib.rs  matching.rs  pattern.rs  syntax.rs  tokens.rs  types.rs  validation.rs
crates/skript-lsp/: Cargo.toml
crates/skript-lsp/src/: backend.rs  main.rs  options.rs  state.rs  ws.rs
crates/skript-lsp/tests/: smoke.rs
extensions/vscode-skript/: .gitignore  .vscodeignore  language-configuration.json  normalize-cache.mjs  package.json  tsconfig.json
extensions/vscode-skript/src/: extension.ts
extensions/vscode-skript/syntaxes/: skript.tmLanguage.json
scripts/: cache-test.ps1
test-fixtures/: test.sk
test-fixtures/SKRIPT_CODE/: chest menus.sk  commands.sk  functions.sk  loops.sk  options and meta.sk  text formatting.sk  timings.sk  variables.sk
test-fixtures/SKRIPT_CODE/experimental features/: for loops.sk  queues.sk  script reflection.sk
