[package]
name = "skript-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for Skript language tooling (pattern matching, validation, completion)"

[features]
default = ["fetch"]
fetch = ["reqwest", "tokio", "thiserror", "url"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, optional = true }
regex = { workspace = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true }
thiserror = { workspace = true, optional = true }
url = { workspace = true, optional = true }
