[package]
name = "skript-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Language Server Protocol implementation for the Skript scripting language"

[[bin]]
name = "skript-lsp"
path = "src/main.rs"

[dependencies]
skript-core = { path = "../skript-core", default-features = false }
tower-lsp = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
