[package]
name = "skript-studio"
version = "0.1.0"
description = "Standalone desktop IDE for editing Minecraft Skript scripts"
authors = ["Skript Studio"]
license = "MIT"
repository = "https://github.com/skript-studio/skript-studio"
edition = "2021"
rust-version = "1.77"

[lib]
name = "skript_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async + logging
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Errors
thiserror = "2"
anyhow = "1"

# Misc utilities
once_cell = "1"
parking_lot = "0.12"
reqwest = { version = "0.12", features = ["json"] }

# Declare this crate as the root of its own workspace so it is not
# auto-included into the outer skript-lsp-rust workspace when the two
# repositories are nested during local development.
[workspace]

[features]
# This feature is used for production builds or when a dev server is not specified.
custom-protocol = ["tauri/custom-protocol"]
